# simplexlsx

./: CMakeLists.txt
XLSXColors/: CMakeLists.txt
Xlsx/: CMakeLists.txt  Workbook.cpp
Zip/: CMakeLists.txt
